feedproxy-kube.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# kubectl create secret generic traintrack-creds --from-literal=mta-api-key=$MTA_API_KEY
# kubectl apply -f kubernets.yaml
# kubectl expose deployment traintrack --type=LoadBalancer --port=80 --target-port=3837
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traintrack-feedproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: traintrack-feedproxy
  template:
    metadata:
      labels:
        run: traintrack-feedproxy
    spec:
      containers:
      - name: feedproxy
        image: gcr.io/mrjones-gke/traintrack-feedproxy:2026-09-13.1
        imagePullPolicy: IfNotPresent
        args: [
          "--use-new-mta-api-endpoint",
          "--mta-api-key", "$(MTA_API_KEY)",
        ]
