kubernetes.yaml
# kubectl create secret generic traintrack-creds --from-literal=mta-api-key=$MTA_API_KEY
# kubectl apply -f kubernets.yaml
# kubectl expose deployment traintrack --type=LoadBalancer --port=80 --target-port=3837
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traintrack
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: traintrack
    spec:
      containers:
      - name: frontend
        image: gcr.io/mrjones-gke/traintrack:2017-03-25.1
        imagePullPolicy: IfNotPresent
        args: [
          "--compile-templates-once",
          "--mta-api-key", "$(MTA_API_KEY)",
        ]
